--- a/qplayer2demo/Podfile
+++ b/qplayer2demo/Podfile
@@ -7,5 +7,6 @@ target 'qplayer2demo' do
   pod 'Bugly'
   pod 'Masonry', '1.0.1'
   #pod 'qplayer2-core', :path => '../'
-  #pod 'qplayer2-core', '1.1.2'
+
+  pod 'qplayer2-core', '1.1.3'
 end
