--- a/qplayer2demo/qplayer2demo/Info.plist
+++ b/qplayer2demo/qplayer2demo/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>是否开启相机权限</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
