--- a/qplayer2demo/Podfile
+++ b/qplayer2demo/Podfile
@@ -3,7 +3,9 @@
 # Uncomment this line if you're using Swift
 # use_frameworks!
 
+
 target 'qplayer2demo' do
+  pod 'PLMediaStreamingKit/iphoneos'
   pod 'Bugly'
   pod 'Masonry', '1.0.1'
   #pod 'qplayer2-core', :path => '../'
