--- a/qplayer2demo/qplayer2demo/Info.plist
+++ b/qplayer2demo/qplayer2demo/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>是否允许使用网络</string>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>是否允许使用网络</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
