提交自动化测试代码

--- a/qplayer2demo/qplayer2demo.xcodeproj/xcshareddata/xcschemes/qplayer2demo.xcscheme
+++ b/qplayer2demo/qplayer2demo.xcodeproj/xcshareddata/xcschemes/qplayer2demo.xcscheme
@@ -28,6 +28,18 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES"
+            testExecutionOrdering = "random">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BAD4CFDA2AD642B900D7F9FC"
+               BuildableName = "qplayer2demoUITests.xctest"
+               BlueprintName = "qplayer2demoUITests"
+               ReferencedContainer = "container:qplayer2demo.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -53,7 +65,7 @@
       </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
