--- a/qplayer2demo/Podfile
+++ b/qplayer2demo/Podfile
@@ -4,8 +4,8 @@
 # use_frameworks!
 
 target 'qplayer2demo' do
-  pod 'Bugly'
-  pod 'Masonry', '1.0.1'
-  #pod 'qplayer2-core', :path => '../'
-  #pod 'qplayer2-core', '1.2.2'
+  #pod 'Bugly'
+  #pod 'Masonry', '1.0.1'
+  pod 'qplayer2-core', :path => '../'
+  #pod 'qplayer2-core', '1.3.4'
 end
