更新文档 依赖远端
(cherry picked from commit d7417590b5e66844d186c573b14c5253147b5373)

--- a/qplayer2demo/Podfile
+++ b/qplayer2demo/Podfile
@@ -9,5 +9,5 @@ target 'qplayer2demo' do
   pod 'Bugly'
   pod 'Masonry', '1.0.1'
   #pod 'qplayer2-core', :path => '../'
-  #pod 'qplayer2-core', '1.4.0'
+  pod 'qplayer2-core', '1.4.0'
 end
